--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,5 +44,5 @@ jobs:
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
-          name: QR-Logo-Final-Fix
+          name: QR-Logo-Final-Clean
           path: build/apk/app-release.apk
