--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,7 +20,7 @@ jobs:
 
       - name: Install Dependencies
         run: |
-          pip install flet
+          pip install flet==0.24.1
           pip install -r requirements.txt
 
       - name: Setup Java
