--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,5 @@
 name: Build Android APK
+
 on:
   push:
     branches:
@@ -18,7 +19,7 @@ jobs:
         with:
           python-version: '3.11'
 
-      - name: Install Dependencies
+      - name: Install Python dependencies
         run: |
           pip install flet==0.24.1
           pip install -r requirements.txt
@@ -32,6 +33,17 @@ jobs:
       - name: Setup Android SDK
         uses: android-actions/setup-android@v3
 
+      # 🔴 ESTO ES LO QUE TE FALTABA
+      - name: Setup Flutter
+        uses: subosito/flutter-action@v2
+        with:
+          flutter-version: '3.19.6'
+          channel: 'stable'
+          cache: true
+
+      - name: Flutter doctor
+        run: flutter doctor -v
+
       - name: Prepare Assets
         run: |
           mkdir -p assets
@@ -39,10 +51,10 @@ jobs:
 
       - name: Build APK with Flet
         run: |
-          yes | flet build apk --verbose
+          flet build apk --verbose
 
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
-          name: QR-Logo-Final-Clean
+          name: QR-Logo-Final
           path: build/apk/app-release.apk
