--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,9 +20,9 @@ jobs:
       - name: Upgrade pip
         run: python -m pip install --upgrade pip
 
-      - name: Install dependencies
+      - name: Install Dependencies
         run: |
-          pip install flet==0.23.2
+          pip install flet
           pip install -r requirements.txt
 
       - name: Setup Java
