--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,52 +13,42 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      # 1. Preparamos Python
       - name: Setup Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.11'
 
-      # 2. INSTALAMOS FLUTTER MANUALMENTE (ESTO ARREGLA EL ERROR EOF)
-      # Al instalarlo aquí, Flet ya no preguntará nada después.
-      - name: Setup Flutter
-        uses: subosito/flutter-action@v2
-        with:
-          channel: 'stable'
-          flutter-version: '3.22.0'
-          cache: true
-
-      # 3. Instalamos librerías (Asegúrate que requirements.txt tenga Pillow==10.0.0)
+      # Aseguramos las dependencias (Pillow 10.0.0 es clave)
       - name: Install Dependencies
         run: |
           pip install flet
           pip install -r requirements.txt
 
-      # 4. Preparamos Java para Android
       - name: Setup Java
         uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
           java-version: '17'
 
-      # 5. Preparamos el SDK de Android
       - name: Setup Android SDK
         uses: android-actions/setup-android@v3
 
-      # 6. Preparamos el Icono (Carpeta assets)
       - name: Prepare Assets
         run: |
           mkdir -p assets
           cp icon.png assets/icon.png
 
-      # 7. Compilamos (SIN "yes |" porque ya no hace falta)
+      # --- EL TRUCO MAESTRO ---
+      # 1. "set +o pipefail": Evita que GitHub marque error cuando 'yes' termine.
+      # 2. "yes |": Responde "y" (yes) automáticamente a la pregunta de instalación.
       - name: Build APK with Flet
+        shell: bash
         run: |
-          flet build apk --verbose
+          set +o pipefail
+          yes | flet build apk --verbose
 
-      # 8. Subimos el resultado
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
-          name: QR-Logo-Final-App
+          name: QR-Logo-APP-FINAL
           path: build/apk/app-release.apk
